# DAT1

./: .dockerignore  .gitignore  AUDIT_LOG.md  AUDIT_LOG_QNN_PROVISIONING.md  CMakeLists.txt  DEPLOY_JETSON.md  Dockerfile.gpu  Dockerfile.jetson  Dockerfile.qualcomm  Dockerfile.radxa  PRESENTATION.md  PRESENTATION_TF_DEPLOYMENT.md  README.md  build_jetson.sh  build_qualcomm.sh  build_rk3588.sh  docker-compose.yml  generate_plots.py  jetson_bcs_demo.py  production_config.json  profiling_data_sample_cow_video.json  run_all_platforms.py
.github/workflows/: edge-build.yml
assets/: mlops.dot  zerocopy.dot
cuda_native_pipeline/: CMakeLists.txt
cuda_native_pipeline/include/: cuda_kernels.h  tensorrt_pipeline.h
cuda_native_pipeline/src/: cuda_kernels.cu  main.cpp  tensorrt_pipeline.cpp
diagrams/: pipeline_architecture.md
go_rtsp_dispatcher/: go.mod  main.go
jetson_orin_nano/: CMakeLists.txt  Dockerfile.jetson  README.md
jetson_orin_nano/include/: bcs_classifier.h  jetson_pipeline.h  nvmm_decoder.h  tensorrt_engine.h
jetson_orin_nano/scripts/: build_jetson.sh  run_jetson.py
jetson_orin_nano/src/: bcs_classifier.cpp  jetson_pipeline.cpp  main.cpp  nvmm_decoder.cpp  tensorrt_engine.cpp
k8s/: daemonset.yaml
models/: bcs_head.npz  bcs_head.onnx.data
models/dinov2_tflite/: fingerprint.pb
models/dinov2_tflite/variables/: variables.data-00000-of-00001  variables.index
models/qnn/: dinov2_vits14_fp32_qnn_cache_info.json  dinov2_vits14_int8_qnn_cache_info.json
models/yolo_tflite/: fingerprint.pb
models/yolo_tflite/variables/: variables.data-00000-of-00001  variables.index
notebooks/: cloud_t4_gpu_master_benchmark.ipynb  colab_gpu_model_compiler.ipynb  colab_local_bridge.ipynb
optimization_suite/: ultimate_edge_optimizer.py
optimization_suite/cpp/: CMakeLists.txt
optimization_suite/cpp/src/: main.cpp  onnx_runner.cpp  qnn_runner.cpp  tflite_runner.cpp
optimization_suite/reports/: run_metrics.md
profiling/: benchmark_results.json  flamegraph.folded  perf_report.csv  perf_report.json  perf_report_table.txt  profiler.py
qnn_models/: dinov2_fp16.cpp  dinov2_fp16_net.json  dinov2_fp32  dinov2_fp32_cpu.bin_cache_info.json  dinov2_fp32_net.json  input.raw  input_list.txt  input_list_seeded.txt  input_list_verify.txt  input_proper.raw  input_proper_nchw.raw
qnn_models/build_fp32/: dinov2_fp32.cpp
qnn_models/build_oe/: build.sh
qnn_models/qnn_bin_output/: execution_metadata.yaml
qnn_models/qnn_cpu_output/: execution_metadata.yaml
qnn_models/qnn_cpu_output2/: execution_metadata.yaml
qnn_models/qnn_cpu_output2/Result_0/: cls.raw
qnn_models/qnn_cpu_output3/: execution_metadata.yaml
qnn_models/qnn_cpu_output3/Result_0/: cls.raw
qnn_models/qnn_proper_output/: execution_metadata.yaml
qnn_models/qnn_proper_output/Result_0/: cls.raw
qnn_models/qnn_verify_output/: execution_metadata.yaml
qualcomm_adaptation/: Dockerfile.qualcomm  README.md  __init__.py  __main__.py  config.py  pipeline.py  qnn_backend.py
radxa_cm5/: CMakeLists.txt  Dockerfile.radxa  README.md
radxa_cm5/include/: bcs_classifier.h  mpp_decoder.h  rga_resizer.h  rk3588_pipeline.h  rknn_engine.h
radxa_cm5/scripts/: build_rk3588.sh  run_rk3588.py
radxa_cm5/src/: bcs_classifier.cpp  main.cpp  mpp_decoder.cpp  rga_resizer.cpp  rk3588_pipeline.cpp  rknn_engine.cpp
reports/: 01_comprehensive_project_analysis.md  02_qualcomm_adaptation_guide.md  03_performance_profiling_framework.md  04_optimization_roadmap.md  05_expert_ai_engineering_audit.md  06_colab_gpu_compilation_guide.md  07_july_2026_deep_dive_research.md  08_colab_local_bridge_deep_dive.md  09_direct_colab_api_automation_deep_dive.md  10_google_colab_cli_deep_dive_guide.md  11_t4_gpu_rtsp_docker_pipeline_audit.md  12_principal_ai_architect_final_master_audit.md  13_ultimate_ai_engineering_optimization_guide.md  14_colab_t4_gpu_disconnection_and_limits_research.md  15_tflite_quantization_w8a8_w8a16_deep_dive.md  16_master_model_optimization_and_comparison_atlas.md  17_real_cloud_t4_gpu_hardware_benchmark_matrix.md  18_enterprise_edge_ai_master_blueprint.md  19_master_t4_gpu_comprehensive_benchmark_report.md  20_tflite_universal_edge_ai_master_report.md  21_tflite_jetson_and_rknn_deep_dive_research.md
rust_rtsp_dispatcher/: Cargo.toml
rust_rtsp_dispatcher/src/: main.rs
scripts/: bcs_rest_api_service.py  benchmark.py  benchmark_tflite.sh  cloud_t4_gpu_master_benchmark.py  colab_anti_disconnect.py  colab_cli_auto_reconnect.py  colab_cli_automation.py  compile_all_models.py  compile_tflite_advanced.py  compile_to_tflite.py  convert_head_to_onnx.py  direct_colab_runner.py  evaluate_bcs_pipeline.py  generate_full_log.py  generate_jetson_log.py  generate_rk3588_log.py  master_model_comparator.py  multi_rtsp_stream_manager.py  prometheus_exporter.py  qat_calibration.py  run_jetson.py  run_qualcomm.py  run_rk3588.py  setup_environment.sh  setup_qnn_sdk.sh  synthetic_benchmark.py  t4_rtsp_pipeline.py  telemetry_exporter.py  test_t4_gpu.py  tflite_cross_platform_hardware_suite.py  tflite_master_engine.py
src/: jetson_pipeline.cpp  rk3588_pipeline.cpp
